# H0-B2B-hackathon

./: .env.example  .gitignore  CLAUDE.md  PropFlow-AI-Features.md  README.md  docker-compose.yml  idea.md
.claude/: settings.json
.claude/commands/: sc.implement.md  sc.plan.md  sc.review.md  sc.spec.md  sc.sync.md
.claude/hooks/: protect-main.sh  reinject-context.sh
.speccraft/: branches.md
.speccraft/phases/backend/: 01-foundation.md  02-core-crm.md  03-ai-agent.md  04-integrations.md
.speccraft/phases/frontend/: 01-foundation.md  (+4 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  seed_demo.py
backend/src/backend/: main.py
backend/src/backend/ai/: agent.py  router.py  tools.py
backend/src/backend/core/: auth.py  config.py  database.py
backend/src/backend/integrations/: call_handlers.py  call_media.py  deal_closer_router.py  email_router.py  places_router.py  slots_router.py  whatsapp.py  whatsapp_handlers.py  whatsapp_router.py  whisper.py
backend/src/backend/models/: agency.py  call_log.py  client.py  interaction_log.py  property.py  site_visit_slot.py  team_member.py
backend/src/backend/routers/: auth.py  clients.py  dashboard.py  properties.py
backend/src/backend/schemas/: ai.py  auth.py  client.py  interaction.py  property.py  slot.py
backend/src/backend/services/: client_service.py  interaction_service.py  property_service.py
frontend/: middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
templates/: design-brief.md  stitch-fixes-round2.md  stitch-missing-screens.md
(+81 files in other folders)
