[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HafizFasih", email = "programmer.fasih.18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.36",
    "fastapi>=0.138.1",
    "httpx>=0.28.0",
    "openai-agents>=0.0.19",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "pywa[fastapi]>=4.2.0",
    "resend>=2.0.0",
    "sqlmodel>=0.0.39",
    "pipecat-ai[openai,webrtc]>=1.4.0",
    "tavily-python>=0.5.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
backend = "backend.main:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
